e2e-tests/tests/snapshots/postgres__function_returning_raster_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: returning_raster
---
{
  "content_type": "image/png",
  "description": "a raster tile function source",
  "name": "function_zxy_raster",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/function_zxy_raster/{z}/{x}/{y}"
  ]
}
