e2e-tests/tests/snapshots/postgres__function_with_token_tilejson.snap
---
source: e2e-tests/tests/postgres.rs
expression: with_token
---
{
  "description": "public.function_zxy_query_test",
  "name": "function_zxy_query_test",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/function_zxy_query_test/{z}/{x}/{y}"
  ]
}
